src/Components/EnergyCalculator/Header/Header.css
.cesn-official-banner {
  width: 100%;
  background-color: #2b2b2b;
}

.cesn-official-banner-inner {
  display: flex;
  align-items: center;
  gap: 0.75rem;
  max-width: var(--main-max-width);
  margin: auto;
  padding: 0.5rem 1rem;
}

.cesn-header-logo {
  height: 1rem;
  width: auto;
}

.cesn-official-banner-text {
  color: #ffffff;
  font-family: var(--font-body);
  font-size: 0.75rem;
}

